# finp

./: .gitignore  README.md  package-lock.json  package.json  project-plan.md  readme.md
backend/: .env  .env.example  PROJECT_COMPLETION.md  README.md  check_schema.py  pyproject.toml  requirements.txt  test_request.json
backend/PostgreSQL/: docker-compose.yml  readme.md
backend/PostgreSQL/init/: cronjob  dockerfile  load_data.py  requirements.txt
backend/PostgreSQL/pgdata/: postmaster.pid
backend/PostgreSQL/pgdata/base/1/: 2619
backend/PostgreSQL/pgdata/base/16384/: 1247  1249  1259  1259_fsm  16453  16457  16458  16460  16462  16466  16467  16469  16469_fsm  16469_vm  16472  16472_fsm  16472_vm  16473  16474  16476  16478  16478_fsm  (+49 more)
backend/PostgreSQL/pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
backend/PostgreSQL/pgdata/pg_xact/: 0000
backend/database/: init_schema.sql  simple_schema.sql
backend/database/PostgreSQL/init/: load_data.py  requirements.txt
backend/scripts/: csv_to_sql_prices.py  export_prices_csv.py  import_prices_csv.sql  init_db.py  migrate_component_configs_to_multiseries.py  migrate_legacy_schema.py  prices.csv  prices.sql  start_server.bat  start_server.py  system_check.bat  system_check.py
backend/src/app/: agent.py  component_configs.py  crud.py  database.py  database_service.py  db.py  enhanced_crud.py  logger.py  main.py  models.py  prompts.py  schemas.py
backend/src/mcp_tools/: db_server.py
backend/src/tests/: test_multi_context.py  test_tools_and_prompts.py
backend/tests/: test_comprehensive.py
(+131 files in other folders)
